# ml-api-template

./: .dockerignore  .gitignore  Banknote.py  CONTRIBUTING.md  Dockerfile  README.md  app.py  classifier.pkl  modelTraining.ipynb  model_config.json  pyproject.toml  requirements.txt  test_app.py
.github/workflows/: ci.yml  deploy.yml
