[project]
name = "end-to-end-ml"
version = "0.1.0"
description = "End-to-end banknote authentication ML API using RandomForest and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gunicorn==19.9.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.42.0",
]
